fix scrollbar and overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,22 +1,32 @@
 body {
   background-color: #5773ee;
   color: #2c2c3c;
-  font-family: "Montserrat", sans-serif;
+	font-family: "Montserrat", sans-serif;
+}
+
+body, #root{
+	width: 100vw;
+	overflow-x: hidden;
+	overflow-y: visible;
+	min-height: 100vh;
 }
 
 *::-webkit-scrollbar-track {
-  margin: 10px 0;
+  margin: 10px;
 	border-radius: 10px;
-	background-color: transparent;  
 }
 
 *::-webkit-scrollbar {
 	width: 8px;
-	background-color: transparent;
+	height: 8px;
 }
 
 *::-webkit-scrollbar-thumb {
+	background-color: #0003;  
 	border-radius: 10px;
 	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: transparent;
+}
+
+*::-webkit-scrollbar-corner { 
+	background: transparent;
 }
